--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,8 @@ ol {
 }
 
 iframe {
-  margin: 20px auto
+  margin: 20px auto;
+  width: 100% !important;
 }
 
 code {
@@ -65,6 +66,16 @@ code {
     box-shadow: 2px 3px 10px rgba(0,0,0,.2);
     padding:10px;
     margin:10px 0px;
+  }
+
+  #exercise img.small {
+   max-width: 360px;
+   width: 100%
+  }
+  
+  #exercise img.medium {
+   max-width: 450px;
+   width: 100%
   }
 
   #exercise {
@@ -149,6 +160,11 @@ code {
     margin:0px;
     font-size: 15px;
     clear: both;
+  }
+
+  li span {
+    font-size: 13px;
+    font-weight: bold;
   }
 
   h1 {
@@ -324,6 +340,8 @@ code {
   }
 
   @media (max-width:480px) {
+
+
 
     #container {
       width: 100%;
