--- a/css/main.css
+++ b/css/main.css
@@ -4,40 +4,13 @@
   box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
-#introduction > div {
-  margin-bottom: 100px
-}
-
-#introduction {
-  width: 100%;
-  max-width: 800px;
-  margin: auto;
-  padding-top: 50px
-}
 
 body {
-  margin:0px 0px 100px;
+  padding:10px 10px 100px;
   display: inline-block;
   width: 100%;
   font-family: 'Graphik', sans-serif;
-}
-
-ol {
-  margin-top: 0px;
-}
-
-.label {
-  font-size: 12px;
-  font-style: italic;
-  font-weight: 800;
-  margin-bottom: 40px;
-  display: inline-block;
-}
-
-
-#exercise .list p.subhed {
-  font-weight: bold;
-  margin: 20px 0px 0px;
+  margin: 0px
 }
 
 
@@ -51,63 +24,60 @@ iframe {
 }
 
 code {
-    font-family: monospace;
+  font-family: monospace;
+}
 
+#exercise {
+  width: 100%;
+  max-width: 860px;
+  margin: 20px auto
 }
 
 #exercise .list p {
   margin: 10px 0px
 }
 
-  #exercise img {
-    width: auto;
-    max-width: 100%;
-    padding: 10px 50px 20px 0px;
-    box-shadow: 2px 3px 10px rgba(0,0,0,.2);
-    padding:10px;
-    margin:10px 0px;
-  }
-
-  #exercise img.small {
-   max-width: 360px;
-   width: 100%
-  }
-  
-  #exercise img.medium {
-   max-width: 450px;
-   width: 100%
-  }
-
-  #exercise {
-    width: 100%;
-    max-width: 860px;
-    margin: 20px auto
-  }
-
-  #container {
-    line-height: 1.6;
-    text-align: left;
-    line-height: 1.5;
-    padding:0px 0px 50px;
-    margin: 0px;
-    display: inline-block;
-    width: 100%;
-  }
-
-#container.introduction {
-  background-color: rgb(8, 24, 37)
+#exercise img {
+  width: auto;
+  max-width: 100%;
+  padding: 10px 50px 20px 0px;
+  box-shadow: 2px 3px 10px rgba(0,0,0,.2);
+  padding:10px;
+  margin:10px 0px;
 }
 
-  #container p code {
-    margin:5px 0px;
-    padding: 4px 5px;
-    border: 1px solid #ebebeb;
-    background-color: #f7f7f7;
-    border-radius: 2px;
-    font-family: "Menlo", Courier, monospace;
-    font-size: 14px;
-    color: #666;
-  }
+#exercise img.small {
+ max-width: 360px;
+ width: 100%
+}
+
+#exercise img.medium {
+ max-width: 450px;
+ width: 100%
+}
+
+
+#container {
+  line-height: 1.6;
+  text-align: left;
+  line-height: 1.5;
+  padding:0px 0px 50px;
+  margin: 0px;
+  display: inline-block;
+  width: 100%;
+}
+
+
+#container p code {
+  margin:5px 0px;
+  padding: 4px 5px;
+  border: 1px solid #ebebeb;
+  background-color: #f7f7f7;
+  border-radius: 2px;
+  font-family: "Menlo", Courier, monospace;
+  font-size: 14px;
+  color: #666;
+}
 
   .lecture span {
     float: left;
@@ -142,7 +112,7 @@ code {
 
 
 
-  #content a:hover, #exercise a:hover, a:hover {
+  a:hover{
     text-decoration: underline;
   }
 
@@ -156,15 +126,59 @@ code {
   }
 
   p, li {
-    color: #444;
     margin:0px;
     font-size: 15px;
     clear: both;
   }
 
+  li {
+    font-size: 15px;
+    margin-bottom: 20px;
+    list-style-type: none;
+    display: inline-block;
+  }
+
   li span {
-    font-size: 13px;
+    font-size: 12px;
     font-weight: bold;
+    letter-spacing: .02em;
+    width: 100%;
+    display: inline-block;
+  }
+
+  li span a {
+    background: #65accc;
+    color: #fff;
+    padding: 4px 7px;
+    border-radius: 3px;
+     transition: all 0.10s ease-in-out;
+ -webkit-transition: all 0.10s ease-in-out;
+ -moz-transition: all 0.10s ease-in-out;
+ -o-transition: all 0.10s ease-in-out;
+  }
+
+  li span a:hover {
+    background: #4A93B4;
+    text-decoration: none;
+  }
+
+  li span a:active {
+    position: relative;
+    top:1px;
+  }
+
+
+  li div {
+    float: left;
+  }
+
+  li div:first-child {
+    width: 70%;
+    margin-right: 10%
+  }
+
+  li div:last-child {
+    width: 20%
   }
 
   h1 {
@@ -212,100 +226,13 @@ code {
     margin-top: 5em;
   }
 
-  p.talkers {
-    text-transform: uppercase;
-    font-size: 11px;
-  }
 
   .section div span {
     font-size: 11px;
     margin-left: 5px;
     color: #999;
   }
-  .nav {
-    float: left;
-    font-size: 11px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    width: 130px;
-    text-align: right;
-    padding: 60px 10px;
-    line-height: 2em;
-    position: fixed;
-  }
 
-  #content > div {
-    width: 650px;
-    padding:1px 0px;
-    clear: both;
-    margin-bottom: 50px;
-    display: inline-block;
-  }
-
-  #content > div img, #content > div .gist {
-    max-width: 100%;
-    box-shadow: 1px 1px 10px #cecece;
-  }
-
-  #content > div a img:hover {
-    box-shadow: 1px 1px 10px #666;
-  }
-
-  #content > div > span, #content .reading {
-    float: left;
-    margin: 0px 0px 20px;
-  }
-
-
-  #content .gist span, #content .gist div {
-    font-size: 11px;
-    line-height: 1em
-  }
-
-  #content {
-    float:right;
-    margin-bottom: 50px;
-  }
-
-  .nav li {
-    list-style-type: none;
-    font-size: 11px
-  }
-
-  .nav ul {
-    margin: 0px;
-    padding-left: 0px
-  }
-
-  .active {
-    font-weight: bold
-  }
-
-  #content > div > span.small {
-    float: left;
-    width: 43%;
-    margin: 20px 30px 20px 0px;
-    font-size: 13px;
-    color:#444;
-    line-height: 1.6em
-  }
-
-
-  #content > div > span.small.tiny {
-  margin-top:10px;
-  font-size:11px;
-  font-weight: normal;
-  }
-
-
-
-   #content > div > span.small.big {
-    width: 89%;
-  }
-
-  li {
-    font-size: 15px;
-  }
 
   td, th {
     display: table-cell;
@@ -341,51 +268,41 @@ code {
 
   @media (max-width:480px) {
 
-
-
     #container {
       width: 100%;
       padding:10px;
     }
 
-    #content {
-      margin: 0px auto;
-      max-width: 300px;
-      float: none;
-    }
-
-    #introduction {
-      padding-top: 0px
-    }
-
-    .nav {
-      width: 300px;
-      padding: 20px;
-      background: white;
-      top: 0px;
-      margin: 0px auto;
-      position: relative;
-      float: none;
-    }
-
-    .nav li {
-      float: left;
-      margin-right: 20px;
-    }
-    .nav li:last-child {
-      margin-right: 0px;
-    }
-
-    #content > div {
-      width: 100%
-    }
-    h1 {
+    h1, h2 {
       font-size: 30px
     }
 
-    .nav li a span {
-  display: none
+    li div:first-child {
+      width: 100%
+    }
+    li div:last-child {
+      width: 100%;
+      margin-top: 10px;
     }
 
-
   }
+
+
+  @font-face {
+  font-family:'graphik';
+  src:url("https://static.propublica.org/v3/assets/fonts/Graphik-Regular-Web.woff2") format("woff2"),url("https://static.propublica.org/v3/assets/fonts/Graphik-Regular-Web.woff") format("woff");
+  font-weight:normal;
+  font-style:normal }
+
+  @font-face {
+  font-family:'graphik';
+  src:url("https://static.propublica.org/v3/assets/fonts/Graphik-Semibold-Web.woff2") format("woff2"),url("https://static.propublica.org/v3/assets/fonts/Graphik-Semibold-Web.woff") format("woff");
+  font-weight:bold;
+  font-style:normal }
+
+
+  @font-face {
+  font-family:'Tiempos Text';
+  src:url("https://static.propublica.org/v3/assets/fonts/TiemposTextWeb-Bold.woff2") format("woff2"),url("https://static.propublica.org/v3/assets/fonts/TiemposTextWeb-Bold.woff") format("woff");
+  font-weight:bold;
+  font-style:normal }
